--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
 node_modules/
+
+# Environment Variables
+.env
+.env.local
+.env.production
+.env.production.local
+.env.development.local
+
+# Build Output
+dist/
+dist-ssr/
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
