--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@
 # Copy this file to .env and update with your values
 
 # API Configuration
-VITE_API_BASE_URL=https://www.farishtey.in/api/
+VITE_API_BASE_URL=https://www.farishtey.in/api
